--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="utf-8">
-    <title>Single file upload</title>
+    <title>multiple file upload</title>
 </head>
 <body>
-<h1>Upload single file with fields</h1>
+<h1>Upload de múltiplos arquivos</h1>
 
 <form action="http://localhost:8080/upload" method="post" enctype="multipart/form-data">
     Files: <input type="file" name="myFiles" multiple><br><br>
